      optimization when you want to reindex all the idxs *and* the
      security in a single shot with reindexObject().

    - doActionFor() propagates **kw to isActionSupported() through
      _checkTransitionGuard() until the guard.check() method so that
      StateChangeInfo() can be constructed with those kwargs.

  Bugs Fixed

    - CMFTopic.Topic/CMFCore.PortalContent: Both these classes were using
      the now-deprecated CMFCore.utils._getViewFor method, and strangely
      enough the deprecation warning didn't show. Replaced with the
      new method of getting the view.

    - CMFDefault.MetadataTool: When asked for a non-existing metadata
      policy, the tool would return the default policy unwrapped. This
      means, at a minimum, that the security declarations on the 
      MetadataElementPolicy instance would never be applied correctly.
      (http://www.zope.org/Collectors/CMF/342)

    - CMFSetup.workflow: Make sure to set the "permissions" attribute on
      DCWorkflow definitions to a tuple, which is expected throughout
      the DCWorkflow code. (http://www.zope.org/Collectors/CMF/346)

    - CMFCore.FSObject: Try to find and call the appropriate method to
      determine the skins tool name instead of hardcoding "portal_skins".
      (http://www.zope.org/Collectors/CMF/349)

    - CMFCore.FSZSQLMethod: Add the forgotten setting to allow simple 
      direct traversal for ZSQL methods to the list of settings recognized 
      and applied by FSZSQLMethods during instantiation and customization.
      (http://www.zope.org/Collectors/CMF/350)

    - CMFCore.FSObject: When customizing filesystem objects in the skins 
      tool, some security-related settings were not transferred to the 
      customized object, namely proxy roles and permission settings.
      (http://www.zope.org/Collectors/CMF/351)

    - Sync catalog metadata column with correct name of DublinCore string
      ExpirationDate method. (http://zope.org/Collectors/CMF/345)
